[package]
name = "bit-long-vec"
version = "0.2.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Vector with fixed bit sized values stored in long."
license = "MIT"
homepage = "https://github.com/eihwaz/bit-long-vec"
repository = "https://github.com/eihwaz/bit-long-vec"
keywords = ["bitset", "bitvector"]
readme = "README.md"

[badges]
travis-ci = { repository = "eihwaz/bit-long-vec", branch = "master" }
codecov = { repository = "eihwaz/bit-long-vec" }
